force-app/main/default/objects/Specialist_and_Product_Group_Mapping__c/Specialist_and_Product_Group_Mapping__c.object-meta.xml
<CustomObject>
    <label>Specialist and Product Group Mapping</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Specialist and Product Group Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>