force-app/main/default/objects/Specialist_and_Product_Group_Mapping__c/fields/Branch_Code__c.field-meta.xml
<CustomField>
    <fullName>Branch_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Branch Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>