force-app/main/default/objects/Specialist_and_Product_Group_Mapping__c/fields/Emp_Id__c.field-meta.xml
<CustomField>
    <fullName>Emp_Id__c</fullName>
    <formula>Agent__r.Employee_ID__c</formula>
    <label>Emp Id</label>
    <type>Text</type>
</CustomField>