force-app/main/default/objects/Specialist_and_Product_Group_Mapping__c/fields/External_Key__c.field-meta.xml
<CustomField>
    <fullName>External_Key__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>External Key</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>