force-app/main/default/objects/Specialist_and_Product_Group_Mapping__c/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <formula>Agent__r.IsActive  &amp;&amp;  Title_and_Product_Group_Mapping__r.Active__c  &amp;&amp;  ( Title__c = Agent__r.Title ) &amp;&amp; (Title__c = Title_and_Product_Group_Mapping__r.Title__c) &amp;&amp; (Branch_Code__c  =  Agent__r.RTL_Branch_Code__c)</formula>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>