force-app/main/default/objects/Specialist_and_Product_Group_Mapping__c/fields/Title_and_Product_Group_Mapping__c.field-meta.xml
<CustomField>
    <fullName>Title_and_Product_Group_Mapping__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Title and Product Group Mapping</label>
    <referenceTo>Title_and_Product_Group_Mapping__c</referenceTo>
    <relationshipLabel>Specialist and Product Group Mappings</relationshipLabel>
    <relationshipName>Specialist_and_Product_Group_Mappings</relationshipName>
    <type>Lookup</type>
</CustomField>